# guan_C5

./: .gitignore  .pylintrc  README.md  environment.yaml  input_max.npy  input_min.npy  input_scaler_max.npy  input_scaler_min.npy  loss_weights.pth  output_max.npy  output_scaler_max.npy  output_scaler_min.npy  pyproject.toml  requirements.txt  saved_preds.pth  saved_y.pth  setup.py
configs/: eval.yaml
configs/callbacks/: default.yaml  rich_progress_bar.yaml
configs/data/: ftd.yaml
configs/experiment/: ftd.yaml
configs/logger/: aim.yaml
configs/model/: ftd.yaml  ftd_mlp.yaml  ftd_mlp_mtl.yaml
configs/paths/: default.yaml
material/: action_description.md  飞行试验数据.xltx
scripts/: 1.sh  2.sh  3.sh  4.sh  MAE.py  MinMaxscalar_data.py  compare.py  findbest.py  ftd_data.py  hanshu.py  loss.py  p2.py  plot.py  result_data.npy  result_statistic.py  schedule.sh  test.py  ttt.py  wg.py  x.npy  x_sorted_28bcc4427e9c4909a255c300.npy  y_sorted_28bcc4427e9c4909a255c300.npy
src/: train.py  train_eval.py
src/data/: ftd_datamodule.py
src/data/components/: ftd_dataset.py
src/models/: ftd_module.py
src/models/components/: MultiTaskLSTM.py  mlp.py  nn.py  weight_methods.py
tests/helpers/: run_if.py
